--- a/index.html
+++ b/index.html
@@ -157,6 +157,227 @@
 
     <!-- ===CAB SECTION END=== -->
 
+    <!-- ===TARIEFS SECTION START=== -->
+
+    <section id="tariffs">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-12">
+            <h2 class="tariffs__heading2">OUR</h2>
+            <h1 class="tariffs__heading1">TARIFFS</h1>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-lg-4 col-md-6">
+            <div class="tariffs__card">
+              <img src="./images/traffic-car.png" />
+              <h3>ECONOMY CLASS</h3>
+              <p>
+                Quisque sollicitudin feugiat risus, eu posuere ex euismod eu.
+                Phasellus hendrerit, massa efficitur.
+              </p>
+              <h1>$1,5/MI</h1>
+              <button class="tariffs__btn">READ MORE</button>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="tariffs__card__middle">
+              <img src="./images/traffic-car.png" />
+              <h3>ECONOMY CLASS</h3>
+              <p>
+                Quisque sollicitudin feugiat risus, eu posuere ex euismod eu.
+                Phasellus hendrerit, massa efficitur.
+              </p>
+              <h1>$1,5/MI</h1>
+              <button class="tariffs__btn">READ MORE</button>
+              <img class="star__img" src="./images/cab-star.png" />
+            </div>
+          </div>
+
+          <div class="col-lg-4 tariffs__content__last">
+            <div class="tariffs__card">
+              <img src="./images/traffic-car.png" />
+              <h3>ECONOMY CLASS</h3>
+              <p>
+                Quisque sollicitudin feugiat risus, eu posuere ex euismod eu.
+                Phasellus hendrerit, massa efficitur.
+              </p>
+              <h1>$1,5/MI</h1>
+              <button class="tariffs__btn">READ MORE</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ===TARIEFS SECTION END=== -->
+
+    <!-- ===SERVICES SECTION START=== -->
+
+    <section id="services">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-12">
+            <h2 class="tariffs__heading2">WE DO BEST</h2>
+            <h1 class="tariffs__heading1 text-white">THEN YOU WISH</h1>
+          </div>
+        </div>
+        <div class="row g-3">
+          <div class="col-md-6">
+            <div class="services__content">
+              <img src="./images/star-icon.png" />
+              <div class="services__content__text">
+                <h4>HOME PICKUP</h4>
+                <p>
+                  Quisque sollicitudin feugiat risus, eu posuere ex euismod eu.
+                  Phasellus hendrerit, massa effi-citur.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="services__content">
+              <img src="./images/processing-icon.png" />
+              <div class="services__content__text">
+                <h4>FAST BOOKING</h4>
+                <p>
+                  Quisque sollicitudin feugiat risus, eu posuere ex euismod eu.
+                  Phasellus hendrerit, massa effi-citur.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 mt-md-5">
+            <div class="services__content">
+              <img src="./images/fire-icon.png" />
+              <div class="services__content__text">
+                <h4>BONUSES FOR RIDE</h4>
+                <p>
+                  Quisque sollicitudin feugiat risus, eu posuere ex euismod eu.
+                  Phasellus hendrerit, massa effi-citur.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 mt-md-5">
+            <div class="services__content">
+              <img src="./images/setting-icon.png" />
+              <div class="services__content__text">
+                <h4>GPS SEARCHING</h4>
+                <p>
+                  Quisque sollicitudin feugiat risus, eu posuere ex euismod eu.
+                  Phasellus hendrerit, massa effi-citur.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-12">
+            <button class="tariffs__btn">READ MORE</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ===SERVICES SECTION END=== -->
+
+    <!-- ===CONTENT SECTION START=== -->
+
+    <section id="content">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-12">
+            <h2 class="tariffs__heading2">DOWNLOAD</h2>
+            <h1 class="tariffs__heading1">BEST CAB SERVIES</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="content__left mt-lg-5">
+              <h3>
+                Downlaod the Cab voucher app free! Get Exciting New Offers
+              </h3>
+              <p>
+                Quisque sollicitudin feugiat risus, eu posuere ex euismod eu.
+                Phasellus hendrerit, massa effi-citur.
+              </p>
+
+              <div class="content__img">
+                <img class="playstore" src="./images/google-playstore.png" />
+                <img class="applestore" src="./images/apple-store.png" />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="content__right">
+              <img src="./images/mobileinhand.png" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ===CONTENT SECTION END=== -->
+
+    <!-- ===TESTIMONIAL SECTION START=== -->
+
+    <section id="testimonial">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-12">
+            <h2 class="tariffs__heading2">HAPPY CLIENT'S</h2>
+            <h1 class="tariffs__heading1 text-white">TESTIMONIALS</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="testimonial__left">
+              <p>
+                Quisque sollicitudin feugiat risus, eu posuere ex euismod <br />
+                eu. Phasellus hendrerit, massa efficitur.Quisque sollicitudin
+                <br />
+                feugiat risus.
+              </p>
+              <div class="testimonial__profile">
+                <img src="./images/jogndoe.png" />
+                <div class="testimonial__profile__content">
+                  <h3>JOHN DOE</h3>
+                  <p>BUSINESS MAN</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 second__testi">
+            <div class="testimonial__left">
+              <p>
+                Quisque sollicitudin feugiat risus, eu posuere ex euismod <br />
+                eu. Phasellus hendrerit, massa efficitur.Quisque sollicitudin
+                <br />
+                feugiat risus.
+              </p>
+              <div class="testimonial__profile">
+                <img src="./images/jogndoe.png" />
+                <div class="testimonial__profile__content">
+                  <h3>JOHN DOE</h3>
+                  <p>BUSINESS MAN</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ===TESTIMONIAL SECTION END=== -->
+
     <!-- ===BOOTSTRAP 5 JS CDN=== -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- ===MAIN JS FILE=== -->
