--- a/index.html
+++ b/index.html
@@ -378,6 +378,107 @@
 
     <!-- ===TESTIMONIAL SECTION END=== -->
 
+    <!-- ===INFO SECTION START=== -->
+
+    <section id="info">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-12">
+            <h4>We are Ready to Take Your Call 24 Hours, 7 Days!</h4>
+            <h1>+123 4567 8900</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ===INFO SECTION END=== -->
+
+    <!-- ===FOOTER SECTION START=== -->
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-sm-6">
+            <div class="footer__left">
+              <h5 class="footer__title">ABOUT CAB HUB</h5>
+              <div class="line"></div>
+              <p>
+                Quisque sollicitudin feugiat risus, eu posuere ex euismod eu.
+                Phasellus hen-drerit, massa efficitur.Quisque sollicitu-din
+                feugiat risus, eu posuere ex euis-mod eu.
+              </p>
+              <ul class="social__link">
+                <li>
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-github"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-sm-6">
+            <div class="footer__middle">
+              <h5 class="footer__title">DOWNLOAD</h5>
+              <div class="line"></div>
+              <p>
+                Quisque sollicitudin feugiat risus, eu posuere ex euismod eu.
+                Phasellus hendrerit,
+              </p>
+              <div class="android__user">
+                <span>Android Users</span>
+                <i class="fab fa-android fs-3 ms-5"></i>
+              </div>
+
+              <div class="apple__user">
+                <span>IOS Users</span>
+                <i class="fab fa-apple fs-3 ms-5"></i>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="footer__right">
+              <h5 class="footer__title">DOWNLOAD</h5>
+              <div class="line"></div>
+
+              <div class="footer__right__content d-flex gap-3">
+                <span><i class="fas fa-map-marker-alt"></i></span>
+                <p>+123, Main Street, Your City, New York, USA 789456</p>
+              </div>
+
+              <div class="footer__right__content d-flex gap-3">
+                <span><i class="fas fa-mobile-alt"></i></span>
+                <p>+123 4567 8900</p>
+              </div>
+
+              <div class="footer__right__content d-flex gap-3">
+                <span><i class="fas fa-envelope"></i></span>
+                <p>free@psdfreebies.com</p>
+              </div>
+
+              <div class="footer__right__content d-flex gap-3">
+                <span><i class="fas fa-mouse-pointer"></i></span>
+                <p>www.psdfreebies.com</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row text-center">
+          <div class="col-12"><p class="footer__copyright">Copyright &copy; PSDfreebies.com</p></div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- ===FOOTER SECTION END=== -->
+
     <!-- ===BOOTSTRAP 5 JS CDN=== -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- ===MAIN JS FILE=== -->
